--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,6 @@ html{
 
 
 body {
-	font-size: 12px;
-	font-family: sans-serif;
 	background: #2c3e50;
 }
 h1 {
@@ -34,15 +32,15 @@ span {
     color: #2BD6B4;
 }
 
-.boton {
+#boton {
     background-color:green; /* Green */
-	align-content: center;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display:-moz-stack;
-    font-size: 16px;
-	margin-left: 70rem;
-  margin-right: auto;}
+    width: 80px;
+    height: 30px;
+    text-align:center;
+    padding: 20px;
+    font-size: 20px;
+    text-decoration:none;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin-left: auto;
+    margin-right: auto;
+}
