--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,8 @@ p {
     color: #ecf0f1;
     font-family: 'Cherry Swash',cursive;
     font-size: 16px;
-	margin-right: 8rem;
+	margin-right: auto;
+    margin-left: auto;
 }
 
 span {
@@ -43,4 +44,5 @@ span {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     margin-left: auto;
     margin-right: auto;
+    border-radius: px;
 }
