--- a/css/temario.css
+++ b/css/temario.css
@@ -1,16 +1,6 @@
 html {
     font-size: 62.5%;
 }
-
-body {
-    font-size: 16px;
-}
-
-h1 {
-    text-align: center;
-    font-size: 3.3em;
-}
-
 body {
     font-size: 12px;
     font-family: sans-serif;
@@ -19,13 +9,14 @@ body {
 
 h1 {
     text-align: center;
-    margin: 40px 0 40px;
+    margin: auto;
     text-align: center;
-    font-size: 30px;
+    font-size: 50px;
     color: #70acb1;
-    text-shadow: 2px 2px 4px #000000;
+    width: auto;
     font-family: 'Cherry Swash', cursive;
-    background-color:#c6f1e7;
+    background-color: #c6f1e7;
+    border-radius: 50px;
 }
 
 .titulo {
@@ -37,32 +28,44 @@ h1 {
     font-size: 20px;
 }
 
-.contenidos {
+.unidad{
+    text-align: justify;
+    color: #70acb1;
+    text-transform: capitalize;
+    font-weight: bold;
+    font-family: 'Cherry Swash', cursive;
+    font-size: 20px;
+}
+
+#contenedor {
     display: block;
     justify-content: center;
     align-items: center;
-    width: 250px;
-    height: 250px;
-    background-color:#c6f1e7;
+    width: 300px;
+    height: auto;
+    background-color: #c6f1e7;
     border: 10px solid #70acb1;
     margin-left: auto;
     margin-right: auto;
     padding: 80px;
     float: none;
+    border-radius: 30px;
 }
 
-li {
-    color: lightseagreen;
+.lista li {
+    color: #c6f1e7;
     align-content: center;
     margin-left: auto;
     margin-right: auto;
     font-family: 'Cherry Swash', cursive;
     font-size: 18px;
+    text-align: center;
+    text-decoration: none;
 }
 
 .pie {
     position: absolute;
-    bottom: 20px;
+    bottom: auto;
     width: 100%;
     text-align: center;
     color: #ecf0f1;
@@ -71,6 +74,7 @@ li {
     margin-right: auto;
     margin-left: auto;
 }
+
 
 .clearfix {
     float: none;
