--- a/css/temas.css
+++ b/css/temas.css
@@ -1,84 +1,118 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
-}
-
-body{
-    background: #7871bf;
-}
-h1 {
-    text-align: center;
-    margin: auto;
-    text-align: center;
-    font-size: 50px;
-    color: #70acb1;
-    width: auto;
-    font-family: 'Cherry Swash', cursive;
-    background-color: #c6f1e7;
-    border-radius: 50px;
-    margin-top: 30px;
-}
-
-.info{
-    justify-content: center;
-    align-items: center;
-    width: 900px;
-    height: auto;
-    background-color: #c6f1e7;
-    border: 10px solid #70acb1;
-    margin-left: 10px;
-    margin-right: auto;
-    margin: auto;
-    padding: 80px;
-    float:left;
-    border-radius: 30px;
-    margin-top: 70px;
-}
-
-.texto{
-    background-color: white;
-    width: auto;
-    text-align: center;
-}
-
-.titulo {
-    text-align: center;
-    color: #70acb1;
-    text-transform: capitalize;
-    font-weight: bold;
-    font-family: 'Cherry Swash', cursive;
-    font-size: 20px;
-}
-
-.unidad{
-    text-align: justify;
-    color: #70acb1;
-    text-transform: capitalize;
-    font-weight: bold;
-    font-family: 'Cherry Swash', cursive;
-    font-size: 20px;
-}
-
-#contenedor {
-    float: right;
-    justify-content: right;
-    align-items: right;
-    width: auto;
-    height: auto;
-    background-color: #c6f1e7;
-    border: 10px solid #70acb1;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 30px;
-    padding: 70px;
-    padding-top: 30px;
-    border-radius: 30px;
     text-decoration: none;
+    font-family: 'Courier New', Courier, monospace;
+    
 }
-li{
-    text-decoration: none;
+
+#general {
+    width: 1200px;
+    margin: 0px auto;
+    margin-top: 20px;
+    border: 1px solid black;
 }
+
+#header {
+    width: 100%;
+    height: 100px;
+    background: rgb(75, 75, 153);
+    color: white;
+    text-align: center;
+    line-height: 90px;
+}
+
 .clearfix {
     float: none;
     clear: both;
+}
+
+#menu {
+    background-color: gray;
+}
+
+#menu ul li {
+    display: block;
+    float: left;
+    border-right: 1px solid black;
+}
+
+#menu ul li a {
+    color: white;
+    padding: 15px;
+    display: block;
+}
+
+#menu ul li:hover {
+    background-color: turquoise;
+    cursor: pointer;
+}
+
+#menu ul li:hover a {
+    display: block;
+    color: white;
+}
+
+#contenido {
+    width: 69%;
+    float: left;
+}
+
+#lateral {
+    float: left;
+    width: 30%;
+    
+    min-height: 500px;
+    text-align: center;
+    margin-top: 10px;
+}
+
+#unidad{
+color: black;
+text-transform: uppercase;
+font-size: 20px;
+}
+
+#temario ul li{
+    text-decoration: none;
+    list-style: none;
+}
+
+
+#contenido .caja {
+    width: 90%;
+    height: auto;
+    background-color: indigo;
+    color: white;
+    float: left;
+    margin: 20px;
+    border: yellow;
+    margin-left: 40px;
+}
+
+#contenido>h1 {
+    text-align: center;
+    border-bottom: 1px solid #ccc;
+    padding: 15px;
+}
+
+h2{
+    text-align: center;
+    padding: 15px;
+}
+
+.texto{
+    text-align: justify;
+    height: 200;
+    padding: 10px;
+}
+
+#footer {
+    width: 100%;
+    height: 55px;
+    line-height: 55px;
+    background: #eee;
+    text-align: center;
+    color: #444;
+    border-top: 1px solid black;
 }
