--- a/css/main.css
+++ b/css/main.css
@@ -4,17 +4,18 @@ html{
 
 
 body {
-	background: #2c3e50;
+	background-image: url("https://fondosmil.com/fondo/27569.jpg")
 }
 h1 {
-	text-align: center;
-	margin: 40px 0 40px;
+    margin-right: auto;
+    margin-left: auto;
 	text-align: center;
 	font-size: 50px;
-	color: #ecf0f1;
+	color: white;
 	text-shadow: 2px 2px 4px #000000;
 	font-family: 'Cherry Swash', cursive;
-	margin-top: 40rem;
+	margin-top: 20rem;
+    background-color: rgb(75, 75, 153);
 }
 
 p {
@@ -22,27 +23,29 @@ p {
     bottom: 20px;
     width: 100%;
     text-align: center;
-    color: #ecf0f1;
+    color:black;
     font-family: 'Cherry Swash',cursive;
-    font-size: 16px;
+    font-size: 29px;
 	margin-right: auto;
     margin-left: auto;
 }
 
-span {
-    color: #2BD6B4;
-}
+
 
 #boton {
-    background-color:green; /* Green */
-    width: 80px;
-    height: 30px;
-    text-align:center;
-    padding: 20px;
-    font-size: 20px;
-    text-decoration:none;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    background-color:rgb(75, 75, 153); /* Green */
+    width: 90px;
+    height: auto;
+    padding: 30px;
     margin-left: auto;
     margin-right: auto;
-    border-radius: px;
+    border-radius: 6px;
+}
+
+#boton a{
+    font-size: 20px;
+    text-decoration:none;
+    font-family: 'Cherry Swash',cursive;
+    text-align:center;
+    color: white;
 }
